Fixed Layout Issue
Fixed Layout Issue and some styling

--- a/src/app/(app)/tours/components/metric-tile/metric-tile.scss
+++ b/src/app/(app)/tours/components/metric-tile/metric-tile.scss
@@ -10,32 +10,39 @@
     border-radius: 10px !important;
     min-width: 240px;
     align-items: unset !important;
-
-    &.active{
+    cursor: pointer;
+    &:hover {
         background: linear-gradient(90deg, rgba(254, 225, 64, 0.2) 2.41%, rgba(250, 112, 154, 0.2) 100%);
         box-shadow: 0px 1px 2px 0px #00000040;
     }
 
-    .mtrc-header {
-        display: flex;
-        gap: 4px;
-        align-items: center;
-        .mtrc-icon {
-            width: 24px;
-            height: 24px;
-            color: var(--primary);
-        }
-        .mtrc-label{
-            font-weight: var(--fw-regular);
-            font-size: var(--fs-2);
-            line-height: var(--fs-5);
-        }
-        
+    &.active {
+        background: linear-gradient(90deg, rgba(254, 225, 64, 0.2) 2.41%, rgba(250, 112, 154, 0.2) 100%);
+        box-shadow: 0px 1px 2px 0px #00000040;
     }
-    .mtrc-count {
-        font-weight: var(--fw-medium);
-        font-size: var(--fs-10);
-        line-height: 60px;
-        margin-left: 12px;
+    .mtrc-link {
+        text-decoration: none;
+        color: var(--black);
+        .mtrc-header {
+            display: flex;
+            gap: 4px;
+            align-items: center;
+            .mtrc-icon {
+                width: 24px;
+                height: 24px;
+                color: var(--primary);
+            }
+            .mtrc-label {
+                font-weight: var(--fw-regular);
+                font-size: var(--fs-2);
+                line-height: var(--fs-5);
+            }
+        }
+        .mtrc-count {
+            font-weight: var(--fw-medium);
+            font-size: var(--fs-10);
+            line-height: 60px;
+            margin-left: 12px;
+        }
     }
 }
